  22 Aug 2021; Manuel Friedli <manuel@gentoo.org> gtk-sharp-3.22.2.ebuild:
  dev-dotnet/gtk-sharp:

*gtk-sharp-3.22.2 (22 Aug 2021)

  22 Aug 2021; Manuel Friedli <manuel@gentoo.org>
  +files/01-meson-build-gio.patch, +gtk-sharp-3.22.2.ebuild,
  -gtk-sharp-2.12.45.ebuild, -gtk-sharp-3.24.24.34.ebuild, metadata.xml:
  dev-dotnet/gtk-sharp: Add ebuild for gtk-sharp 3.22.2.

*gtk-sharp-2.12.45 (19 Mar 2020)

  19 Mar 2020; Manuel Friedli <manuel@fritteli.ch> +gtk-sharp-2.12.45.ebuild,
  +metadata.xml:
  dev-dotnet/gtk-sharp: Add ebuild for version 2.12.45