@@ -1,3 +1,9 @@
+*gtk-sharp-3.22.2-r1 (23 Aug 2021)
+
+  23 Aug 2021; Manuel Friedli <manuel@gentoo.org> +gtk-sharp-3.22.2-r1.ebuild,
+  -gtk-sharp-3.22.2.ebuild:
+  dev-dotnet/gtk-sharp: Fix USE flag requirements.
+
   22 Aug 2021; Manuel Friedli <manuel@gentoo.org> gtk-sharp-3.22.2.ebuild:
   dev-dotnet/gtk-sharp:
 
